Remove rps-ui specific files

--- a/index.html
+++ b/index.html
@@ -4,89 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Rock Paper Scissors: Play with Your Friends</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Audiowide&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-            rel="stylesheet"
-        />
-        <link rel="stylesheet" href="style.css" />
         <script type="module" src="script.js"></script>
     </head>
-    <body>
-        <div class="overlay game-start">
-            <img
-                src="images/rock-paper-scissors.svg"
-                alt="rock paper scissors image"
-                class="rps-img"
-            />
-            <button class="overlay-btn">Start Game</button>
-            <p class="winning-msg">
-                Reach 5<span>pts</span> before Computer to win
-            </p>
-        </div>
-        <header class="header">
-            <h1 class="main-heading">Rock Paper Scissors</h1>
-        </header>
-        <main class="main">
-            <div class="game-container">
-                <div class="game-screen">
-                    <div class="human-hand">
-                        <img
-                            src="images/rock.svg"
-                            alt="rock hand sign"
-                            class="hand-sign--big"
-                        />
-                        <p class="played-hand">Human</p>
-                    </div>
-                    <div class="computer-hand">
-                        <img
-                            src="images/rock.svg"
-                            alt="rock hand sign"
-                            class="hand-sign--big"
-                        />
-                        <p class="played-hand">Computer</p>
-                    </div>
-                </div>
-                <div class="buttons">
-                    <div class="rock-box">
-                        <img
-                            src="images/rock.svg"
-                            alt="rock hand sign"
-                            class="rock"
-                        />
-                        <p class="sign-name">rock</p>
-                    </div>
-                    <div class="paper-box">
-                        <img
-                            src="images/paper.svg"
-                            alt="paper hand sign"
-                            class="paper"
-                        />
-                        <p class="sign-name">paper</p>
-                    </div>
-                    <div class="scissors-box">
-                        <img
-                            src="images/scissors.svg"
-                            alt="scissors hand sign"
-                            class="scissors"
-                        />
-                        <p class="sign-name">scissors</p>
-                    </div>
-                </div>
-                <div class="score-container">
-                    <div class="score-box">
-                        <div class="human-score--box">
-                            <h3>Human</h3>
-                            <p class="score human-score">0</p>
-                        </div>
-                        <div class="computer-score--box">
-                            <h3>Computer</h3>
-                            <p class="score computer-score">0</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </main>
-    </body>
+    <body></body>
 </html>
