Add data attribute in html for hand signs for cleaner logic in our JS

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                         <img
                             src="images/rock.svg"
                             alt="rock hand sign"
-                            class="rock"
+                            class="hand-sign"
+                            data-value="rock"
                         />
                         <p class="sign-name">rock</p>
                     </div>
@@ -61,7 +62,8 @@
                         <img
                             src="images/paper.svg"
                             alt="paper hand sign"
-                            class="paper"
+                            class="hand-sign"
+                            data-value="paper"
                         />
                         <p class="sign-name">paper</p>
                     </div>
@@ -69,7 +71,8 @@
                         <img
                             src="images/scissors.svg"
                             alt="scissors hand sign"
-                            class="scissors"
+                            class="hand-sign"
+                            data-value="scissors"
                         />
                         <p class="sign-name">scissors</p>
                     </div>
